# llm_playground

./: readme.md
.streamlit/: config.toml  index.html
Exemplo_GuiaTCross/: .dockerignore  Dockerfile  README.md  __init__.py  config_analytics.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  use_cases.py
Exemplo_GuiaTCross/adapters/: __init__.py  adapter.py
Exemplo_GuiaTCross/documents/: manual _ tcross 2021.txt  manual _ tcross 2024.txt  manual _ tcross 22.txt  manual_tcross_2022.txt
Exemplo_GuiaTCross/domain/: __init__.py  entities.py
Exemplo_GuiaTCross/ui/: __init__.py  streamlit.py
Exemplo_GuiaTCross/use_cases/: __init__.py  use_cases.py
RAG/: pyproject.toml
RAG/exemplos/: 1_criando_uma_rag_simples.py  2_criando_rag_baseando_texto copy.py  2_criando_rag_baseando_texto.py
RAG/exemplos/arquivos/: manual_seguranca_737.txt  mca-100-16-2021-01-04-_1_.txt
RAG/notebooks/: my_first_rag.ipynb
