[project]
name = "exemplo-guiatcross"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.21",
    "openai>=1.84.0",
    "streamlit>=1.45.1",
    "beautifulsoup4",
]
